# openaime

./: .gitignore  2507.11988v2_extracted.txt  CLAUDE.md  LICENSE  MANIFEST.in  README.md  README_zh.md  aime_intro.md  aime_zh.md  extract_pdf.py  main.py  pyproject.toml  textual_tutorial.md
.demo/: try_tui.py
aime/: __init__.py  aime.py
aime/base/: __init__.py  config.py  events.py  knowledge.py  llm.py  session.py  session_manager.py  session_storage.py  skill.py  tool.py  types.py  user_question.py
aime/components/: __init__.py  actor.py  actor_factory.py  planner.py  progress_module.py
aime/providers/: __init__.py
aime/providers/llm/: __init__.py  anthropic.py  openai.py  volcengine.py
aime/providers/tools/: __init__.py  mcp.py
aime/tools/builtin/: __init__.py  ask_user_question.py  bundles.py  file_read.py  file_update.py  file_write.py  shell_exec.py
aime/utils/: logging.py
aime_tui/: __init__.py  app.py  config.py  main.py  theme.py
aime_tui/assets/: aime.tcss
aime_tui/components/: __init__.py  actor_pane.py  ask_question_dialog.py  event_stream.py  input_box.py  progress_pane.py  session_list_dialog.py  status_bar.py
docs/superpowers/plans/: 2026-04-08-aime-python-framework-implementation-plan.md  2026-04-09-actor-reuse.md  2026-04-10-aime-tui-terminal-frontend.md  2026-04-12-aime-skills-hot-reload.md  2026-04-13-session-persistence-implementation.md  2026-04-13-switch-to-native-function-calling-plan.md  2026-04-14-improve-actor-reuse-plan.md  2026-04-14-llm-streaming-output.md
docs/superpowers/specs/: 2026-04-08-aime-python-framework-design.md  2026-04-13-session-persistence-design.md  2026-04-14-improve-actor-reuse-design.md  2026-04-14-llm-streaming-output-design.md
tests/: test_aime.py  test_session_manager.py  test_session_storage.py
tests/aime_tui/: test_app.py  test_e2e.py  test_theme.py
tests/aime_tui/components/: test_actor_pane.py  test_ask_question_dialog.py  test_event_stream.py  test_input_box.py  test_progress_pane.py  test_status_bar.py
tests/base/: test_config.py  test_knowledge.py  test_llm.py  test_skill.py  test_tool.py  test_types.py
tests/components/: test_actor.py  test_actor_factory.py  test_planner.py  test_progress_module.py
tests/fixtures/skills/test-skill-1/: SKILL.md
tests/fixtures/skills/test-skill-2/: SKILL.md
tests/providers/llm/: test_anthropic.py  test_openai.py  test_volcengine.py
tests/providers/tools/: __init__.py  test_mcp.py
tests/tools/builtin/: test_file_read.py  test_file_update.py  test_file_write.py  test_shell_exec.py
