[project]
name = "aime"
version = "0.1.0"
description = "Aime: Fully-autonomous Multi-agent Framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "anthropic>=0.40",
    "rich>=13.0",
    "aiofiles>=23.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
