[project]
name = "openaime"
version = "0.1.0"
description = "OpenAime: Fully-autonomous Multi-agent Framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "anthropic>=0.40",
    "rich>=13.0",
    "aiofiles>=23.0",
    "mcp>=1.0",
    "volcengine-python-sdk[ark]>=5.0.23",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aime", "aime_tui"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.5",
]
tui = [
    "textual>=0.43.0",
    "rich>=13.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[project.scripts]
openaime = "aime_tui.main:main"
